--- a/GamedevQuest/appsettings.json
+++ b/GamedevQuest/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=gamedevquest;Username=postgres;Password=151416"
+  },
+  "jwt": {
+    "key": "G@meDevQuestSecretKeyWhichIsBig123456789",
+    "Issuer": "GamedevQuest",
+    "Audience": "GamedevQuesters",
+    "ExpireMinutes": 120
+  }
 }
