--- a/GamedevQuest/appsettings.json
+++ b/GamedevQuest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=gamedevquest;Username=postgres;Password=151416"
+    "DefaultConnection": ""
   },
   "jwt": {
     "key": "G@meDevQuestSecretKeyWhichIsBig123456789",
