#33 Added a code block that sets up the cors policy

--- a/GamedevQuest/appsettings.json
+++ b/GamedevQuest/appsettings.json
@@ -14,5 +14,13 @@
     "Issuer": "GamedevQuest",
     "Audience": "GamedevQuesters",
     "ExpireMinutes": 120
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      {
+        "Name": "LocalFrontend",
+        "Url": "http://localhost:3000"
+      }
+    ]
   }
 }
