#48 Added a logout api and refresh api and support for refresh tokens

--- a/GamedevQuest/appsettings.json
+++ b/GamedevQuest/appsettings.json
@@ -13,7 +13,10 @@
     "key": "G@meDevQuestSecretKeyWhichIsBig123456789",
     "Issuer": "GamedevQuest",
     "Audience": "GamedevQuesters",
-    "ExpireMinutes": 120
+    "ExpireMinutes": 20
+  },
+  "RefreshToken": {
+    "ExpiresMinutes": 4320
   },
   "Cors": {
     "AllowedOrigins": [
